--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "prettier-plugin-organize-imports": "^3.2.2",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
