--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.22.0",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.6.2"
+    "react-icons": "^4.7.1",
+    "react-router-dom": "^6.6.2",
+    "spotify-web-api-ts": "^1.4.5"
   },
   "devDependencies": {
+    "@types/node": "^16.0.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
