--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "jest",
-    "check-types": "tsc --noEmit",
+    "types": "tsc --noEmit",
     "lint": "eslint src"
   },
   "dependencies": {
