--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -1,4 +1,4 @@
-name: lint
+name: eslint
 
 on:
   push:
@@ -26,6 +26,6 @@ jobs:
         working-directory: ./
         run: yarn
 
-      - name: Run lint
+      - name: Run eslint
         working-directory: ./
         run: yarn lint
