--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -26,6 +26,6 @@ jobs:
         working-directory: ./
         run: yarn
 
-      - name: Run tests
+      - name: Run jest
         working-directory: ./
         run: yarn test
