--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "lint": "eslint src"
   },
   "dependencies": {
+    "@nivo/calendar": "^0.80.0",
+    "@nivo/colors": "^0.80.0",
+    "@nivo/core": "^0.80.0",
     "classnames": "^2.3.2",
+    "dayjs": "^1.11.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
