--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "prettier-plugin-organize-imports": "^3.2.2",
+    "prettier-plugin-tailwindcss": "^0.2.2",
     "tailwindcss": "^3.2.4",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
