migrate to pnpm

--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -13,19 +13,19 @@ jobs:
       matrix:
         node-version: [16.x]
     steps:
-      - uses: actions/checkout@v2
-
+      - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8.1.1
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'yarn'
-          cache-dependency-path: yarn.lock
+          cache: 'pnpm'
+          cache-dependency-path: pnpm-lock.yaml
 
       - name: Install dependencies
-        working-directory: ./
-        run: yarn
+        run: pnpm install
 
       - name: Run eslint
-        working-directory: ./
-        run: yarn lint
+        run: pnpm lint
