--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,14 @@
 {
+  "arrowParens": "always",
+  "bracketSameLine": false,
+  "endOfLine": "auto",
   "jsxSingleQuote": true,
-  "singleQuote": true,
+  "plugins": ["prettier-plugin-organize-imports"],
+  "pluginSearchDirs": false,
+  "printWidth": 100,
   "semi": true,
+  "singleQuote": true,
   "tabWidth": 2,
   "trailingComma": "all",
-  "printWidth": 100,
-  "bracketSameLine": false,
-  "useTabs": false,
-  "arrowParens": "always",
-  "endOfLine": "auto"
+  "useTabs": false
 }
