--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,5 +5,5 @@
     "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true
   },
-  "include": ["vite.config.ts", "jest.setup.ts"]
+  "include": ["vite.config.ts", "vitest.setup.ts"]
 }
