--- a/.github/workflows/typescript.yml
+++ b/.github/workflows/typescript.yml
@@ -9,23 +9,10 @@ on:
 jobs:
   typescript:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [16.x]
+
     steps:
       - uses: actions/checkout@v3
-      - uses: pnpm/action-setup@v2
-        with:
-          version: 8.1.1
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'pnpm'
-          cache-dependency-path: pnpm-lock.yaml
+      - uses: oven-sh/setup-bun@v1
 
-      - name: Install dependencies
-        run: pnpm install
-
-      - name: Run typescript
-        run: pnpm types
+      - run: bun install
+      - run: bun types
