--- a/package.json
+++ b/package.json
@@ -1,57 +1,48 @@
 {
-  "name": "your-favourite-year-in-music",
+  "name": "your-favourite-year-in-music-bun",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.0.0",
   "type": "module",
-  "license": "MIT",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "build": "bunx --bun vite build",
+    "dev": "bunx --bun vite",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "vitest",
-    "types": "tsc --noEmit",
-    "lint": "eslint src"
+    "types": "tsc --noEmit"
   },
   "dependencies": {
-    "@nivo/calendar": "^0.83.0",
-    "@nivo/colors": "^0.83.0",
-    "@nivo/core": "^0.83.0",
-    "classnames": "^2.3.2",
+    "@nivo/calendar": "^0.83.1",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
-    "react-router-dom": "^6.16.0",
+    "react-icons": "^4.12.0",
+    "react-router-dom": "^6.19.0",
     "spotify-web-api-ts": "^1.4.5"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.1.3",
-    "@testing-library/react": "^14.0.0",
+    "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
-    "@types/node": "^20.8.0",
-    "@types/react": "^18.2.24",
-    "@types/react-dom": "^18.2.8",
-    "@typescript-eslint/eslint-plugin": "^6.7.3",
-    "@typescript-eslint/parser": "^6.7.3",
-    "@vitejs/plugin-react": "^4.1.0",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.50.0",
+    "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.4",
     "jsdom": "^22.1.0",
     "postcss": "^8.4.31",
-    "prettier": "^3.0.3",
-    "prettier-plugin-organize-imports": "^3.2.3",
-    "prettier-plugin-tailwindcss": "^0.5.4",
-    "tailwindcss": "^3.3.3",
-    "ts-node": "^10.9.1",
+    "prettier": "^3.1.0",
+    "prettier-plugin-organize-imports": "^3.2.4",
+    "prettier-plugin-tailwindcss": "^0.5.7",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
-    "vite": "^4.4.9",
-    "vite-plugin-eslint": "^1.8.1",
-    "vitest": "^0.34.6"
+    "vite": "^5.0.0",
+    "vitest": "^0.34.6",
+    "vitest-dom": "^0.1.1"
   }
 }
