--- a/package.json
+++ b/package.json
@@ -14,35 +14,36 @@
   "dependencies": {
     "@nivo/calendar": "^0.83.1",
     "dayjs": "^1.11.10",
-    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.19.0",
+    "react": "^18.2.0",
     "spotify-web-api-ts": "^1.4.5"
   },
   "devDependencies": {
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
-    "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/react": "^18.2.37",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.53.0",
+    "bun-types": "latest",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "eslint": "^8.53.0",
     "jsdom": "^22.1.0",
     "postcss": "^8.4.31",
-    "prettier": "^3.1.0",
     "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.7",
+    "prettier": "^3.1.0",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
     "vite": "^5.0.0",
-    "vitest": "^0.34.6",
-    "vitest-dom": "^0.1.1"
+    "vitest-dom": "^0.1.1",
+    "vitest": "^0.34.6"
   }
 }
