--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "your-favourite-year-in-music-bun",
   "private": true,
   "version": "2023.11.1",
-  "type": "module",
   "scripts": {
     "build": "bunx --bun vite build",
     "dev": "bunx --bun vite",
@@ -24,27 +23,26 @@
   "devDependencies": {
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
-    "@types/react-dom": "^18.2.15",
+    "@types/bun": "^1.0.2",
+    "@types/eslint": "^8.56.2",
     "@types/react": "^18.2.37",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
+    "@types/react-dom": "^18.2.15",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.16",
     "bun-types": "latest",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
+    "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.4",
-    "eslint": "^8.53.0",
     "jsdom": "^23.2.0",
     "postcss": "^8.4.31",
+    "prettier": "^3.1.0",
     "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.7",
-    "prettier": "^3.1.0",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
     "vite": "^5.0.0",
-    "vitest-dom": "^0.1.1",
-    "vitest": "^1.2.1"
+    "vitest": "^1.2.1",
+    "vitest-dom": "^0.1.1"
   }
 }
