--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "jsdom": "^23.2.0",
     "postcss": "^8.4.31",
+    "postcss-load-config": "^5.0.2",
     "prettier": "^3.1.0",
     "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.7",
