change types to check

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,14 +30,14 @@
     },
   },
   "include": [
-    ".eslintrc.js",
+    ".eslintrc.cjs",
     ".postcssrc.config.js",
     ".prettierrc.js",
     "**/*.js",
     "**/*.ts",
     "**/*.tsx",
-    "tailwind.config.js",
-    "vite.config.js",
+    "tailwind.config.ts",
+    "vite.config.ts",
     "vitest.setup.ts",
   ],
   "exclude": ["node_modules"],
