--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview",
     "release": "bun scripts/release.ts",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "types": "tsc --noEmit",
+    "check": "tsc --noEmit",
     "test": "vitest"
   },
   "dependencies": {
