--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -12,7 +12,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: oven-sh/setup-bun@v1
+      - uses: pnpm/action-setup@v3
+      - uses: actions/setup-node@v4
+        with:
+          node-version-file: "package.json"
 
-      - run: bun install
-      - run: bun lint
+      - run: pnpm install
+      - run: pnpm lint
