--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,8 +26,8 @@
     /* Path Aliases */
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./src/*"],
-    },
+      "~/*": ["./src/*"]
+    }
   },
   "include": [
     ".eslintrc.cjs",
@@ -38,7 +38,7 @@
     "**/*.tsx",
     "tailwind.config.ts",
     "vite.config.ts",
-    "vitest.setup.ts",
+    "vitest.setup.ts"
   ],
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules"]
 }
