--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "your-favourite-year-in-music-bun",
+  "name": "your-favourite-year-in-music",
   "private": true,
   "version": "2024.1.1",
   "type": "module",
+  "packageManager": "pnpm@8.15.5",
   "scripts": {
-    "build": "bunx --bun vite build",
-    "dev": "bunx --bun vite",
+    "build": "vite build",
+    "dev": "vite",
     "preview": "vite preview",
-    "release": "bun scripts/release.ts",
+    "release": "tsx scripts/release.ts",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "check": "tsc --noEmit",
     "test": "vitest"
@@ -24,15 +25,14 @@
   "devDependencies": {
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
-    "@types/bun": "^1.0.2",
     "@types/eslint": "^8.56.2",
+    "@types/node": "^20.11.30",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.16",
-    "bun-types": "latest",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jsdom": "^23.2.0",
@@ -42,9 +42,13 @@
     "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "tailwindcss": "^3.3.5",
+    "tsx": "^4.7.1",
     "typescript": "^5.2.2",
     "vite": "^5.0.0",
     "vitest": "^1.2.1",
     "vitest-dom": "^0.1.1"
+  },
+  "engines": {
+    "node": ">=20.11.0"
   }
 }
